--- a/src/com.weadmin.mxgraph-rap.example/plugin.xml
+++ b/src/com.weadmin.mxgraph-rap.example/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.rap.ui.entrypoint">
       <entrypoint
-            class="example.ExampleOne"
+            class="example.ExampleTwo"
             id="com.weadmin.mxgraph-rap.example.entrypoint1"
             path="/hello">
       </entrypoint>
